context of Isabelle/Scala:

  - Isabelle_System.make_directory
  - Isabelle_System.copy_dir
  - Isabelle_System.copy_file
  - Isabelle_System.copy_base_file
  - Isabelle_System.rm_tree
  - Isabelle_System.download


*** System ***

* Command-line tool "isabelle version" supports repository archives
(without full .hg directory). More options.



New in Isabelle2021 (February 2021)
-----------------------------------

*** General ***

* On macOS, the IsabelleXYZ.app directory layout now follows the other
platforms, without indirection via Contents/Resources/. INCOMPATIBILITY,
use e.g. IsabelleXYZ.app/bin/isabelle instead of former
IsabelleXYZ.app/Isabelle/bin/isabelle or
IsabelleXYZ.app/Isabelle/Contents/Resources/IsabelleXYZ/bin/isabelle.

* HTML presentation uses rich markup produced by Isabelle/PIDE,
resulting in more colors and links.

* HTML presentation includes auxiliary files (e.g. ML) for each theory.

* Proof method "subst" is confined to the original subgoal range: its
included distinct_subgoals_tac no longer affects unrelated subgoals.
Rare INCOMPATIBILITY.

* Theory_Data extend operation is obsolete and needs to be the identity
function; merge should be conservative and not reset to the empty value.
Subtle INCOMPATIBILITY and change of semantics (due to
Theory.join_theory from Isabelle2020). Special extend/merge behaviour at
the begin of a new theory can be achieved via Theory.at_begin.


*** Isabelle/jEdit Prover IDE ***

* Improved GUI look-and-feel: the portable and scalable "FlatLaf Light"
is used by default on all platforms (appearance similar to IntelliJ
IDEA).

* Improved markup for theory header imports: hyperlinks for theory files
work without formal checking of content.

* The prover process can download auxiliary files (e.g. 'ML_file') for
theories with remote URL. This requires the external "curl" program.

* Action "isabelle.goto-entity" (shortcut CS+d) jumps to the definition
of the formal entity at the caret position.
