@@ -4,7 +4,6 @@
 #
 
 ISABELLE_PLATFORM_FAMILY=""
-ISABELLE_PLATFORM32=""
 ISABELLE_PLATFORM64=""
 ISABELLE_APPLE_PLATFORM64=""
 ISABELLE_WINDOWS_PLATFORM32=""
@@ -17,11 +16,7 @@ case $(uname -s) in
       aarch64)
         ISABELLE_PLATFORM64=arm64-linux
         ;;
-      arm*)
-        ISABELLE_PLATFORM32=arm32-linux
-        ;;
       *)
-        ISABELLE_PLATFORM32=x86-linux
         ISABELLE_PLATFORM64=x86_64-linux
         ;;
     esac
@@ -30,7 +25,6 @@ case $(uname -s) in
     ISABELLE_PLATFORM_FAMILY="macos"
     case $(sw_vers -productVersion) in
       10.10*|10.11*|10.12*|10.13*|10.14*)
-        ISABELLE_PLATFORM32=x86-darwin
         ISABELLE_PLATFORM64=x86_64-darwin
         ;;
       *)
@@ -52,9 +46,6 @@ case $(uname -s) in
     case $(uname -m) in
       x86_64)
         ISABELLE_PLATFORM64=x86_64-cygwin
-        ;;
-      i?86)
-        ISABELLE_PLATFORM32=x86-cygwin
         ;;
     esac
     ;;
